<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bike Trainer</string>
    <string name="zone1">Zone 1 &#8211; less than 55% FTPw</string>
    <string name="zone2">Zone 2 &#8211; 55&#8211;74% FTPw</string>
    <string name="zone3">Zone 3 &#8211; 75&#8211;89% FTPw</string>
    <string name="zone4">Zone 4 &#8211; 90&#8211;104% FTPw</string>
    <string name="zone5">Zone 5 &#8211; 105&#8211;120% FTPw</string>
    <string name="zone6">Zone 6 &#8211; more than 120% FTPw</string>
    <string name="zone7">Zone 7 &#8211; SUPERHUMAN FTPw</string>
    <string name="enter_time">Enter Time (in minutes)</string>
    <string name="button_send">Drop the Hammer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_workout">Workout</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="RepCountdownRemaining">0</string>
    <string name="lblTotalCountdownRemaining">Total time remaining in workout: </string>
    <string name="lblZone">Zone</string>
    <string name="lblFTP">FTP</string>
    <string name="lblHR">HR</string>
    <string name="lblRPM">RPM</string>
    <string name="lblReps">\u0020 reps at:</string>
    <string name="lblRepTime">Rep time</string>
    <string name="lblRestTime">Rest time</string>
    
    
    <!-- Preferences Strings -->
    <string name="lblPrefFTPHeader">FTP</string>
    <string name="lblPrefFTPSummary">What is your FTP?</string>
    <string name="lblPrefHRHeader">Max HR</string>
    <string name="lblPrefHRSummary">What is your Max heart rate?</string>
    <string name="lblPrefDisplayTypeHeader">Values instead of Percentage</string>
    <string name="lblPrefDisplayTypeSummary">Display FTP/HR as absolute numbers?</string>

</resources>
