<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:card_view="http://schemas.android.com/apk/res-auto"
       android:id="@+id/card_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       card_view:cardCornerRadius="5dp"
       android:layout_margin="5dp">
       
    <LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:orientation="vertical"
	       	android:padding="5sp">
	       			    
		<RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		        android:background="@drawable/layout_bottom_border"
		        android:layout_marginBottom="5dp" >
		    <TextView
		        android:id="@+id/txtViewReps"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:layout_centerHorizontal="true"
		        android:textSize="15sp" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lblReps"
		        android:textSize="15sp"
	        	android:layout_toEndOf="@id/txtViewReps" />
	    </RelativeLayout>
		<LinearLayout 
		    android:id="@+id/layoutActiveWorkout"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <LinearLayout 
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:orientation="vertical"
				android:paddingEnd="15sp"
				android:layout_gravity="center" >
		       	<TextView
			        android:id="@+id/txtViewZoneLbl"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/fourth"
			        android:textSize="12sp"
			        android:text="@string/lblZone" />
			    <TextView
			        android:id="@+id/txtViewZone"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/fourth"
			        android:textSize="50sp" />
		    </LinearLayout>
		    <LinearLayout 
		    	android:id="@+id/layoutWorkoutDetails"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:orientation="vertical" >
				<RelativeLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" >
				    <TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/lblRepTime"
			        	android:layout_centerVertical="true"
			        	android:layout_alignParentStart="true"  />
				    <TextView
				        android:id="@+id/txtViewRepTime"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
			        	android:layout_centerVertical="true"
			        	android:layout_alignParentEnd="true"
			        	android:textSize="20sp" />
				</RelativeLayout>
			    <RelativeLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" >
				    
				    <TextView
				        android:id="@+id/txtLblFTP"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/lblFTP"
			        	android:layout_centerVertical="true"
			        	android:layout_alignParentStart="true"  />
				    <TextView
				        android:id="@+id/txtViewFTP"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
			        	android:layout_alignParentEnd="true"
			        	android:layout_centerVertical="true"
			        	android:textSize="20sp"  />
			    </RelativeLayout>
				<RelativeLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" >
				    
				    <TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/lblHR"
			        	android:layout_centerVertical="true"
			        	android:layout_alignParentStart="true"  />
				    
				    <TextView
				        android:id="@+id/txtViewHR"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content" 
			        	android:layout_alignParentEnd="true"
			        	android:layout_centerVertical="true"
			        	android:textSize="20sp"  />
				</RelativeLayout>
			</LinearLayout>
		</LinearLayout>
		
		<RelativeLayout
		    android:id="@+id/layoutRest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/layout_top_border"
	        android:layout_marginTop="5dp" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lblRestTime"
	        	android:layout_centerVertical="true"
	        	android:layout_alignParentStart="true"  />
		    <TextView
		        android:id="@+id/txtViewRestTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:layout_centerVertical="true"
	        	android:layout_alignParentEnd="true"
	        	android:textSize="20sp" />
		</RelativeLayout>
	</LinearLayout>
</android.support.v7.widget.CardView>
